<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/button_add" />

                <TextView
                    android:id="@+id/infoAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_button_add" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/button_remove" />

                <TextView
                    android:id="@+id/infoDelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_button_delete" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/button_load" />

                <TextView
                    android:id="@+id/infoOpen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_button_open" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/button_save" />

                <TextView
                    android:id="@+id/infoSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_button_save" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/button_deselect_all" />

                <TextView
                    android:id="@+id/infoDeselect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_button_deselect" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/button_select_all" />

                <TextView
                    android:id="@+id/infoSelect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_button_select" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/button_play" />

                <TextView
                    android:id="@+id/infoPlay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_button_play" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
   
</LinearLayout>
